# ocaml-composite

./: .gitignore  LICENSE  README.md  composite.opam  dune-project
lib/: alist.ml  arrow.ml  arrow_choice.ml  arrow_choice_sigs.ml  arrow_sigs.ml  bare_state.ml  binary_trampoline.ml  category.ml  category_sigs.ml  cokleisli.ml  dune  free.ml  function.ml  functor.ml  functor_sigs.ml  kanren.ml  kleisli.ml  nonempty_list.ml  nonempty_list.mli  nonempty_sequence.ml  pair.ml  sigs.ml  stateful.ml  thunk.ml  thunk.mli  type_proxy.ml  type_proxy.mli  zzz.ml
test/: applicative_laws.ml  dune  functor_laws.ml  test_arrow.ml  test_arrow_choice.ml  test_category.ml  test_functor.ml
