(test
  (name test_category)
  (modules test_category)
  (libraries composite alcotest))

(test
  (name test_arrow)
  (modules test_arrow)
 (libraries composite alcotest))

(test
  (name test_arrow_choice)
  (modules test_arrow_choice)
  (libraries composite alcotest))

(test
  (name test_functor)
  (modules test_functor)
  (libraries composite alcotest))


